--- a/BrowseMe/Base.lproj/BrowseMe.storyboard
+++ b/BrowseMe/Base.lproj/BrowseMe.storyboard
@@ -19,11 +19,11 @@
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                         <subviews>
                             <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="Q0f-qI-BNl">
-                                <rect key="frame" x="0.0" y="57" width="414" height="48"/>
+                                <rect key="frame" x="0.0" y="44" width="414" height="48"/>
                                 <subviews>
                                     <textField clipsSubviews="YES" clearsContextBeforeDrawing="NO" alpha="0.75" contentMode="scaleToFill" semanticContentAttribute="spatial" contentHorizontalAlignment="center" contentVerticalAlignment="center" placeholder="  Search or type web address" textAlignment="justified" adjustsFontForContentSizeCategory="YES" minimumFontSize="17" translatesAutoresizingMaskIntoConstraints="NO" id="Urm-hl-upM">
                                         <rect key="frame" x="8" y="4" width="314" height="40"/>
-                                        <color key="backgroundColor" white="0.0" alpha="0.0" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
+                                        <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                                         <nil key="textColor"/>
                                         <fontDescription key="fontDescription" type="system" pointSize="15"/>
                                         <textInputTraits key="textInputTraits" autocorrectionType="no" spellCheckingType="no" keyboardType="webSearch" returnKeyType="go" smartDashesType="yes" smartInsertDeleteType="yes" textContentType="url"/>
@@ -33,6 +33,7 @@
                                     </textField>
                                     <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="0" textAlignment="center" lineBreakMode="tailTruncation" numberOfLines="0" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="oNQ-SH-U0w">
                                         <rect key="frame" x="331" y="10" width="28" height="28"/>
+                                        <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                                         <constraints>
                                             <constraint firstAttribute="width" secondItem="oNQ-SH-U0w" secondAttribute="height" multiplier="5:5" id="9kT-mc-dKC"/>
                                         </constraints>
@@ -52,7 +53,7 @@
                                         </connections>
                                     </button>
                                 </subviews>
-                                <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
+                                <color key="backgroundColor" white="0.0" alpha="0.0" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                                 <constraints>
                                     <constraint firstItem="Urm-hl-upM" firstAttribute="leading" secondItem="Q0f-qI-BNl" secondAttribute="leading" constant="8" id="8Wa-yl-9mc"/>
                                     <constraint firstAttribute="trailing" secondItem="7yk-oO-YR7" secondAttribute="trailing" constant="8" id="CCP-JZ-dLn"/>
@@ -67,89 +68,71 @@
                                     <constraint firstItem="Urm-hl-upM" firstAttribute="top" secondItem="Q0f-qI-BNl" secondAttribute="top" constant="4" id="oKW-Km-a9t"/>
                                 </constraints>
                             </view>
-                            <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="J9V-ce-C7c">
-                                <rect key="frame" x="0.0" y="813" width="414" height="49"/>
-                                <subviews>
-                                    <stackView opaque="NO" contentMode="scaleToFill" distribution="fillEqually" spacing="35" translatesAutoresizingMaskIntoConstraints="NO" id="njc-tK-6Ki">
-                                        <rect key="frame" x="8" y="8" width="398" height="35"/>
-                                        <subviews>
-                                            <button opaque="NO" contentMode="scaleAspectFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="fXq-NP-RT6">
-                                                <rect key="frame" x="0.0" y="0.0" width="37" height="35"/>
-                                                <state key="normal" title="back" image="back"/>
-                                                <connections>
-                                                    <action selector="backWardButton:" destination="BYZ-38-t0r" eventType="touchUpInside" id="wmW-wZ-Tld"/>
-                                                </connections>
-                                            </button>
-                                            <button opaque="NO" contentMode="scaleAspectFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="BZe-98-Ju6">
-                                                <rect key="frame" x="72" y="0.0" width="37.5" height="35"/>
-                                                <state key="normal" title="for" image="forward"/>
-                                                <connections>
-                                                    <action selector="forwardButton:" destination="BYZ-38-t0r" eventType="touchUpInside" id="9b0-PQ-CYu"/>
-                                                </connections>
-                                            </button>
-                                            <button opaque="NO" contentMode="scaleAspectFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="zIa-P2-jiX">
-                                                <rect key="frame" x="144.5" y="0.0" width="37" height="35"/>
-                                                <state key="normal" title="Refresh" image="refersh"/>
-                                                <connections>
-                                                    <action selector="refreshButton:" destination="BYZ-38-t0r" eventType="touchUpInside" id="9WE-Qc-jdN"/>
-                                                </connections>
-                                            </button>
-                                            <button opaque="NO" contentMode="scaleAspectFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="Sfr-Nu-Lvt">
-                                                <rect key="frame" x="216.5" y="0.0" width="37" height="35"/>
-                                                <state key="normal" title="Home" image="home"/>
-                                                <connections>
-                                                    <action selector="homeButton:" destination="BYZ-38-t0r" eventType="touchUpInside" id="TcO-WJ-kjl"/>
-                                                </connections>
-                                            </button>
-                                            <button opaque="NO" contentMode="scaleAspectFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="3wS-EV-szE">
-                                                <rect key="frame" x="288.5" y="0.0" width="37.5" height="35"/>
-                                                <state key="normal" title="ALL Tabs" image="allTabs"/>
-                                                <connections>
-                                                    <action selector="allTabs:" destination="BYZ-38-t0r" eventType="touchUpInside" id="e0Z-X7-PaP"/>
-                                                    <segue destination="RFU-Lc-fmu" kind="presentation" id="lK2-zH-5MF"/>
-                                                </connections>
-                                            </button>
-                                            <button opaque="NO" contentMode="scaleAspectFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="Lh8-cV-Zo7">
-                                                <rect key="frame" x="361" y="0.0" width="37" height="35"/>
-                                                <state key="normal" title="Home" image="add"/>
-                                                <connections>
-                                                    <action selector="newTab:" destination="BYZ-38-t0r" eventType="touchUpInside" id="NAT-DR-Mfz"/>
-                                                </connections>
-                                            </button>
-                                        </subviews>
-                                    </stackView>
-                                </subviews>
-                                <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
-                                <constraints>
-                                    <constraint firstAttribute="height" constant="49" id="Jy4-0o-r3l"/>
-                                    <constraint firstAttribute="trailing" secondItem="njc-tK-6Ki" secondAttribute="trailing" constant="8" id="KQo-4k-YOW"/>
-                                    <constraint firstAttribute="bottom" secondItem="njc-tK-6Ki" secondAttribute="bottom" constant="6" id="SMp-uc-gGA"/>
-                                    <constraint firstItem="njc-tK-6Ki" firstAttribute="top" secondItem="J9V-ce-C7c" secondAttribute="top" constant="8" id="iQH-dv-FTb"/>
-                                    <constraint firstItem="njc-tK-6Ki" firstAttribute="leading" secondItem="J9V-ce-C7c" secondAttribute="leading" constant="8" id="wqV-9q-fMh"/>
-                                </constraints>
-                            </view>
                             <progressView hidden="YES" opaque="NO" contentMode="scaleToFill" verticalHuggingPriority="750" progress="0.5" translatesAutoresizingMaskIntoConstraints="NO" id="sjC-0a-sdq">
-                                <rect key="frame" x="0.0" y="105" width="414" height="2"/>
+                                <rect key="frame" x="0.0" y="92" width="414" height="2"/>
                             </progressView>
                             <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="cyV-tj-XfT">
-                                <rect key="frame" x="0.0" y="109" width="414" height="704"/>
+                                <rect key="frame" x="0.0" y="96" width="414" height="717"/>
                                 <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                             </view>
+                            <toolbar opaque="NO" clearsContextBeforeDrawing="NO" contentMode="scaleToFill" barStyle="black" translatesAutoresizingMaskIntoConstraints="NO" id="GgH-R0-cbL">
+                                <rect key="frame" x="0.0" y="813" width="414" height="49"/>
+                                <color key="backgroundColor" white="0.0" alpha="0.65000000000000002" colorSpace="custom" customColorSpace="calibratedWhite"/>
+                                <items>
+                                    <barButtonItem style="plain" systemItem="rewind" id="lzv-Us-Umi">
+                                        <connections>
+                                            <action selector="backWardButton:" destination="BYZ-38-t0r" id="e5l-Gf-N2z"/>
+                                        </connections>
+                                    </barButtonItem>
+                                    <barButtonItem style="plain" systemItem="flexibleSpace" id="PD7-RQ-XL2"/>
+                                    <barButtonItem systemItem="fastForward" id="Mvx-qd-McX">
+                                        <connections>
+                                            <action selector="forwardButton:" destination="BYZ-38-t0r" id="q24-Co-cNt"/>
+                                        </connections>
+                                    </barButtonItem>
+                                    <barButtonItem style="plain" systemItem="flexibleSpace" id="b49-Cc-eAz"/>
+                                    <barButtonItem systemItem="refresh" id="MTV-es-VKz">
+                                        <connections>
+                                            <action selector="refreshButton:" destination="BYZ-38-t0r" id="Rd3-a1-ZOR"/>
+                                        </connections>
+                                    </barButtonItem>
+                                    <barButtonItem style="plain" systemItem="flexibleSpace" id="1oq-T1-JlP"/>
+                                    <barButtonItem title="home" image="home2" id="MvX-Cf-nQ2">
+                                        <connections>
+                                            <action selector="homeButton:" destination="BYZ-38-t0r" id="ptH-oF-vEj"/>
+                                        </connections>
+                                    </barButtonItem>
+                                    <barButtonItem style="plain" systemItem="flexibleSpace" id="5kQ-I7-znY"/>
+                                    <barButtonItem title="AllTabs" image="allTabs" id="ir9-hB-ZXS">
+                                        <connections>
+                                            <action selector="allTabs:" destination="BYZ-38-t0r" id="zXW-6q-cbO"/>
+                                            <segue destination="RFU-Lc-fmu" kind="presentation" id="Pqo-mp-gKE"/>
+                                        </connections>
+                                    </barButtonItem>
+                                    <barButtonItem style="plain" systemItem="flexibleSpace" id="ciH-HR-NVu"/>
+                                    <barButtonItem systemItem="add" id="Ga9-tS-Rol">
+                                        <connections>
+                                            <action selector="newTab:" destination="BYZ-38-t0r" id="sEy-c2-TFF"/>
+                                        </connections>
+                                    </barButtonItem>
+                                </items>
+                                <color key="tintColor" red="1" green="0.40643951839999998" blue="0.0" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
+                            </toolbar>
                         </subviews>
                         <color key="backgroundColor" red="0.95178712966844248" green="1" blue="0.99339466784003094" alpha="1" colorSpace="custom" customColorSpace="displayP3"/>
                         <constraints>
+                            <constraint firstItem="6Tk-OE-BBY" firstAttribute="bottom" secondItem="GgH-R0-cbL" secondAttribute="bottom" id="6VG-YX-Js9"/>
                             <constraint firstItem="cyV-tj-XfT" firstAttribute="leading" secondItem="6Tk-OE-BBY" secondAttribute="leading" id="MCh-1z-RP3"/>
+                            <constraint firstItem="GgH-R0-cbL" firstAttribute="trailing" secondItem="6Tk-OE-BBY" secondAttribute="trailing" id="Mjp-v3-nxW"/>
                             <constraint firstItem="cyV-tj-XfT" firstAttribute="top" secondItem="sjC-0a-sdq" secondAttribute="bottom" constant="2" id="OMV-C4-PrG"/>
-                            <constraint firstItem="J9V-ce-C7c" firstAttribute="top" secondItem="cyV-tj-XfT" secondAttribute="bottom" id="PeX-Qt-vK6"/>
-                            <constraint firstItem="Q0f-qI-BNl" firstAttribute="top" secondItem="6Tk-OE-BBY" secondAttribute="top" constant="13" id="RUP-zZ-FHA"/>
+                            <constraint firstItem="GgH-R0-cbL" firstAttribute="top" secondItem="cyV-tj-XfT" secondAttribute="bottom" id="OXx-TM-Kt8"/>
+                            <constraint firstItem="Q0f-qI-BNl" firstAttribute="top" secondItem="6Tk-OE-BBY" secondAttribute="top" id="RUP-zZ-FHA"/>
+                            <constraint firstItem="GgH-R0-cbL" firstAttribute="leading" secondItem="6Tk-OE-BBY" secondAttribute="leading" id="WHq-Uu-y4u"/>
                             <constraint firstItem="sjC-0a-sdq" firstAttribute="trailing" secondItem="Q0f-qI-BNl" secondAttribute="trailing" id="WkC-cJ-Ml0"/>
-                            <constraint firstItem="J9V-ce-C7c" firstAttribute="trailing" secondItem="6Tk-OE-BBY" secondAttribute="trailing" id="c6S-j5-4C9"/>
                             <constraint firstItem="sjC-0a-sdq" firstAttribute="leading" secondItem="Q0f-qI-BNl" secondAttribute="leading" id="lrF-7x-6Ob"/>
                             <constraint firstItem="Q0f-qI-BNl" firstAttribute="leading" secondItem="6Tk-OE-BBY" secondAttribute="leading" id="pzo-5W-p7u"/>
-                            <constraint firstItem="6Tk-OE-BBY" firstAttribute="bottom" secondItem="J9V-ce-C7c" secondAttribute="bottom" id="qtD-Mt-9xX"/>
                             <constraint firstItem="Q0f-qI-BNl" firstAttribute="trailing" secondItem="6Tk-OE-BBY" secondAttribute="trailing" id="uhc-pt-k1Z"/>
                             <constraint firstItem="cyV-tj-XfT" firstAttribute="trailing" secondItem="6Tk-OE-BBY" secondAttribute="trailing" id="ymp-8b-iCh"/>
-                            <constraint firstItem="J9V-ce-C7c" firstAttribute="leading" secondItem="6Tk-OE-BBY" secondAttribute="leading" id="zuP-1G-A2N"/>
                             <constraint firstItem="sjC-0a-sdq" firstAttribute="top" secondItem="Q0f-qI-BNl" secondAttribute="bottom" id="zx4-MX-2qg"/>
                         </constraints>
                         <viewLayoutGuide key="safeArea" id="6Tk-OE-BBY"/>
@@ -160,6 +143,7 @@
                         <outlet property="progressBar" destination="sjC-0a-sdq" id="Tsa-X7-Dwx"/>
                         <outlet property="searchBarTextField" destination="Urm-hl-upM" id="qbL-7v-rgJ"/>
                         <outlet property="settingBtn" destination="7yk-oO-YR7" id="Bcd-cu-bCB"/>
+                        <outlet property="toolBarView" destination="GgH-R0-cbL" id="zq6-vg-2u4"/>
                         <outlet property="webViewBrowseVC" destination="cyV-tj-XfT" id="DSg-Lx-reK"/>
                     </connections>
                 </viewController>
@@ -305,14 +289,10 @@
         </scene>
     </scenes>
     <resources>
-        <image name="add" width="128" height="128"/>
-        <image name="allTabs" width="128" height="128"/>
-        <image name="back" width="128" height="128"/>
+        <image name="allTabs" width="26" height="26"/>
         <image name="close" width="128" height="128"/>
         <image name="closeBtn" width="128" height="128"/>
-        <image name="forward" width="128" height="128"/>
-        <image name="home" width="128" height="128"/>
-        <image name="refersh" width="128" height="128"/>
+        <image name="home2" width="24" height="24"/>
         <image name="setting" width="128" height="128"/>
     </resources>
 </document>
